--- a/zrq-app/pom.xml
+++ b/zrq-app/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>edu.soa</groupId>
-    <artifactId>zrq-service</artifactId>
+    <artifactId>zrq-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>zrq-service</name>
+    <name>zrq-app</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -37,17 +37,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-            <version>5.1.32</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -62,6 +56,8 @@
             <version>2.0.2.RELEASE</version>
         </dependency>
     </dependencies>
+
+
     <!-- Spring的仓库地址 -->
     <repositories>
         <repository>
