--- a/food-service/pom.xml
+++ b/food-service/pom.xml
@@ -6,13 +6,16 @@
         <groupId>edu.soa</groupId>
         <artifactId>soa-practical</artifactId>
         <version>1.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>edu.soa</groupId>
-    <artifactId>zrq-service</artifactId>
+    <artifactId>food-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>zrq-service</name>
+    <name>food-service</name>
     <description>Demo project for Spring Boot</description>
+
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -37,17 +40,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-dependencies</artifactId>
-            <version>Finchley.RC1</version>
-            <type>pom</type>
-            <scope>import</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
