食品管理系统改造删除，拆分erems系统，考试管理系统拆分比重过低，用户管理过高，考虑削减用户部分功能到考试管理

--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
         <module>eureka</module>
         <module>zrq-service</module>
         <module>zrq-app</module>
-        <module>customer-service</module>
-        <module>food-service</module>
+        <module>user-manage</module>
+        <module>exam-service</module>
         <module>erems</module>
     </modules>
 
