--- a/exam-service/pom.xml
+++ b/exam-service/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0</version>
     </parent>
     <groupId>edu.soa</groupId>
-    <artifactId>food-service</artifactId>
+    <artifactId>exam-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>food-service</name>
+    <name>exam-service</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -45,16 +45,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <!-- swagger start-->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
         </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-        </dependency>
-        <!--swagger end-->
     </dependencies>
 
     <build>
