--- a/exam-service/src/main/resources/application.yml
+++ b/exam-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8083
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/soa?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/erems?useUnicode=true&characterEncoding=utf8
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
