--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
                 <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
                 <version>2.0.2.RELEASE</version>
             </dependency>
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper</artifactId>
+                <version>4.1.0</version>
+            </dependency>
             <!-- swagger start-->
             <dependency>
                 <groupId>io.springfox</groupId>
